@@ -550,8 +550,8 @@ public class GoogleHadoopFileSystemConfiguration {
         .setCopyBatchThreads(GCS_COPY_BATCH_THREADS.get(config, config::getInt))
         .setTransportType(GCS_HTTP_TRANSPORT.get(config, config::getEnum))
         .setProxyAddress(GCS_PROXY_ADDRESS.get(config, config::get))
-        .setProxyUsername(GCS_PROXY_USERNAME.get(config, config::get))
-        .setProxyPassword(GCS_PROXY_PASSWORD.get(config, config::get))
+        .setProxyUsername(GCS_PROXY_USERNAME.getPassword(config))
+        .setProxyPassword(GCS_PROXY_PASSWORD.getPassword(config))
         .setProjectId(projectId)
         .setMaxListItemsPerCall(GCS_MAX_LIST_ITEMS_PER_CALL.get(config, config::getLong))
         .setMaxRequestsPerBatch(GCS_MAX_REQUESTS_PER_BATCH.get(config, config::getLong))
