@@ -1,5 +1,7 @@
 1.9.10 - 2018-XX-XX
 
+  1. Use Hadoop `CredentialProvider` API to retrieve proxy credentials.
+
 
 1.9.9 - 2018-10-19
 
